# interscript-python

./: .gitignore  README.adoc  build.sh  example.py  pyproject.toml
.github/workflows/: release.yml  test.yml
src/interscript/: stdlib.py
